# ros_openni2_multicam

./: CMakeLists.txt  README.md  README.rst  package.xml  plugin.xml
launch/: test.launch  two_camera_example.launch
src/: camera_handler.cpp  camera_handler.h  image_mask.cpp  image_mask.h  openni_driver.cpp  openni_driver.h
