<?xml version="1.0"?>
<package>
  <name>ros_openni2_multicam</name>
  <version>0.1.0</version>
  <description>Custom OpenNI2 driver built especially for multicamera setups</description>

  <maintainer email="holz@uni-bonn.de">Dirk Holz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
  </export>
</package>
